# nada-numpy

./: .gitignore  .pylintrc  CONTRIBUTING  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish-test.yml  python-publish.yml  test.yml
examples/: README.md
examples/broadcasting/: README.md  broadcasting.ipynb  config.py  main.py  main_long.py  nada-project.toml
examples/common/: nillion_client_helper.py  nillion_keypath_helper.py  nillion_payments_helper.py  utils.py
examples/dot_product/: README.md  dot_product.ipynb  main.py  nada-project.toml
examples/linear-regression/: main.py  nada-project.toml
examples/linear_regression/: README.md  cleartext.ipynb  linear_regression.ipynb  main.py  nada-project.toml
examples/linear_regression_training/: nada-project.toml
examples/matrix_multiplication/: README.md  config.py  main.py  matrix_multiplication.ipynb  nada-project.toml
examples/non-linear_functions/: nada-project.toml
examples/rational_numbers/: README.md  main.py  nada-project.toml  rational_numbers.ipynb
examples/shuffle/: nada-project.toml
nada_algebra/: __init__.py  array.py  client.py  context.py  funcs.py  nada_typing.py  rational_config.py  types.py  utils.py
nada_numpy/: __init__.py  array.py  client.py  context.py  funcs.py  fxpmath.py  legacy_client.py  nada_typing.py  types.py  utils.py
scripts/: install_version.py
tests/: test_all.py  tests.py
tests/base/: nada-project.toml
tests/broadcasting_div/: nada-project.toml
tests/broadcasting_mul/: nada-project.toml
tests/broadcasting_sub/: nada-project.toml
tests/broadcasting_sum/: nada-project.toml
tests/broadcasting_vec/: nada-project.toml
tests/gauss_jordan/: nada-project.toml
tests/generate_array/: nada-project.toml
tests/hstack/: nada-project.toml
tests/matrix_multiplication/: README.md  nada-project.toml
tests/nada-tests/: nada-project.toml
tests/python-tests/: test_client.py  test_client_legacy.py
tests/reveal/: nada-project.toml
tests/set_item/: nada-project.toml
tests/shape/: nada-project.toml
tests/sum/: nada-project.toml
tests/supported_operations/: nada-project.toml
tests/vstack/: nada-project.toml
(+219 files in other folders)
