[tool.poetry]
name = "nada-algebra"
version = "0.3.0"
description = "Nada-Algebra is a Python library designed for algebraic operations on NumPy-like array objects on top of Nada DSL and Nillion Network."
authors = ["José Cabrero-Holgueras <jose.cabrero@nillion.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
nada-dsl = "^0.2.1"
py-nillion-client = "^0.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = {extras = ["jupyter"], version = "^24.4.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
